Bug 1803530 - Follow resolution alignment in VideoStreamFactory. r=webrtc-reviewers,jib, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D163598